--- a/html/changelog.html
+++ b/html/changelog.html
@@ -86,6 +86,49 @@ ADDING CREDITS?  EDIT templates/header.html (or footer.html if they're for old t
 		-->
 		<div class="commit sansserif">
 
+			<h2 class="date">2019.10.24</h2>
+			<h3 class="author">GeneralVeers25 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Nanotrasen's latest space station is under construction. Sign up now - STRIKE THE EARTH!</li>
+			</ul>
+			<h3 class="author">Kurfursten updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Snaxi has a new public garage with snowmobiles. We hid the keys under the snowmobiles instead of under the mat.</li>
+				<li class="rscadd">Snowmobiles now move 4x slower if not traveling on favored terrain - this includes all stuff you find outside (permafrost, glacier, frozen core, asphalt, cement, snow, snow caves, etc.).</li>
+				<li class="rscadd">New material for mappers: cement. It's tough like engine floor.</li>
+				<li class="rscadd">You can clownify the pump shotgun, NT glock, or egun with a rainbow crayon. Bleach cleans them back to normal.</li>
+			</ul>
+			<h3 class="author">Sauberstaub updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="spellcheck">Dog's gender is now taken into account in the "new master" message.</li>
+			</ul>
+			<h3 class="author">SonixApache updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">cappuccino now heals like milk does & passione now heals like low grade honey does</li>
+			</ul>
+			<h3 class="author">ancientpower updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Adds three new sets of wizard robes with cold weather protection.</li>
+			</ul>
+
+			<h2 class="date">2019.10.23</h2>
+			<h3 class="author">Dacendeth updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Inflatable shelters now fit in the inflatable storage box.</li>
+			</ul>
+			<h3 class="author">DeityLink updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Changed the way minor mutations affect a disease's infection chance.</li>
+				<li class="rscdel">Before, the disease's infection chance is increased by 10%, but is then capped at 50%</li>
+				<li class="rscadd">After, the disease's infection chance is changed to more or less 10% of its base value for that disease type (so the infection chance of a Prion can vary between 0% and 20%, and a Virus' between 60% and 80%)</li>
+			</ul>
+			<h3 class="author">Kurfursten updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">The CMO headset is now always sterilized against memes.</li>
+				<li class="rscadd">Players may now press the "request high priority jobs" button at the bottom of the latejoin menu to ping admins + captain/HoP PDA. The ping appears in red to admins if the captain/HoP are braindead/not carrying their PDA.</li>
+				<li class="bugfix">Fixed a bug where the HoP/IAA/Captain would be pinged once for each fax machine when receiving a fax.</li>
+			</ul>
+
 			<h2 class="date">2019.10.22</h2>
 			<h3 class="author">Kharkov72 updated:</h3>
 			<ul class="changes bgimages16">
@@ -2172,39 +2215,6 @@ ADDING CREDITS?  EDIT templates/header.html (or footer.html if they're for old t
 			<ul class="changes bgimages16">
 				<li class="rscadd">Altered the desc of Donutgiver to say all four commands for its usage.</li>
 				<li class="rscadd">Altered the desc of the Lawgiver to include the words needed to switch ammo types.</li>
-			</ul>
-
-			<h2 class="date">2019.05.08</h2>
-			<h3 class="author">DDihanov updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="tweak">Added small delay to item throwing.</li>
-			</ul>
-			<h3 class="author">DeityLink updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="tweak">Vampires no longer deal 10 genetic damage per tick when sucking blood, instead they deal 1 brute damage that will be identified during autopsy as coming from sharp teeth.</li>
-				<li class="tweak">Vampires may now only drink up to 100 "total" blood from a single victim. If the victim is still alive, they may continue to drink to get some "usable" blood back, but they will need at least 7 different victims to reach full powers.</li>
-			</ul>
-			<h3 class="author">I-VAPE-VOX-CLOACA-EVERY-DAY-OF-MY-LIFE updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">Mysterious pills have started appearing in Maintenance. Be very careful.</li>
-				<li class="tweak">Jars are now easier to use and can now be slurped by chemmasters, just like a bucket,</li>
-				<li class="rscadd">Two reskinned jars will now spawn in Chemistry's roundstart closet.</li>
-			</ul>
-			<h3 class="author">Kharkov72 updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">There is now an air alarm in the box bridge.</li>
-			</ul>
-			<h3 class="author">brndd updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="rscadd">monkey transformation now gives you the opportunity to name your new monkey self.</li>
-			</ul>
-
-			<h2 class="date">2019.05.07</h2>
-			<h3 class="author">PaulRitter updated:</h3>
-			<ul class="changes bgimages16">
-				<li class="bugfix">people now get tracked correctly on z-level 4 and above</li>
-				<li class="rscadd">You can now pull the pilot out of a mech if he/she is unconscious</li>
-				<li class="tweak">you will now get a progressbar when entering a mecha/inserting a mmi</li>
 			</ul>
 		</div>
 		<!--
