--- a/code/modules/credits/credits.html
+++ b/code/modules/credits/credits.html
@@ -22,7 +22,7 @@
 		#soundplayer {
 			position: absolute;
 			bottom: 0%;
-	        left: 0%;
+	        left: -67px;
 			z-index: 999;
 			width: 15%;
 		}
